[package]
name = "gcal"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "*", features = [ "tokio-native-tls", "gzip", "json" ] }
tokio = { version = "*", features = [ "full" ] }
anyhow = "*"
url = "*"
serde = "^1"
serde_derive = "^1"
serde_json = "^1"