[package]
name = "gcal"
version = "0.1.0"
edition = "2021"
description = "gcal is simplistic a client library for Google Calendar, designed to power saturn-cli"
authors = ["Erik Hollensbe <erik+github@hollensbe.org>"]
license = "MIT"
homepage = "https://github.com/erikh/gcal"
repository = "https://github.com/erikh/gcal"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "^0.11", features = [ "tokio-native-tls", "gzip", "json" ] }
tokio = { version = "^1.31", features = [ "full" ] }
anyhow = "^1"
url = "^2"
serde = "^1"
serde_derive = "^1"
serde_json = "^1"
chrono = "^0.4"
chrono-tz = "^0.8"
thiserror = "^1"
davisjr = "^0.4"
uuid = { version = "^1", features = [ "v4" ] }
